--- a/src/app/core/tool/app.component.html
+++ b/src/app/core/tool/app.component.html
@@ -7,10 +7,22 @@
         </div>
 
         <div class="header__menu">
-          <button></button>
+          <div class="header__menu-item header__menu-item--curcle">
+            <a href="https://www.linkedin.com/in/olha-kobylianska-0482a8237/" target="_blank"><img
+                src="../../../assets/images/linkedin-logo.svg" alt="logo linkedin"></a>
+          </div>
+          <div class="header__menu-item header__menu-item--curcle">
+            <a href="https://github.com/OlhaKobylianskaAlex" target="_blank"><img
+                src="../../../assets/images/github-logo.svg" alt="logo github"></a>
+          </div>
+          <div class="header__menu-item">
+            <button class="header__button">LOG IN</button>
+          </div>
         </div>
       </div>
     </header>
-    <router-outlet></router-outlet>
+    <div class="container-main">
+      <router-outlet></router-outlet>
+    </div>
   </div>
 </main>
