--- a/src/app/core/tool/modules/main-page/component/main-page-home.component.html
+++ b/src/app/core/tool/modules/main-page/component/main-page-home.component.html
@@ -1,2 +1,12 @@
-main-page
-p
+<div class="main-page">
+  <div class="info-name">my name is Olha</div>
+  <div class="info-position">I`m a FRONT-END DEVELOPER</div>
+  <div class="info-menu">
+    <button class="info-menu__button">About me</button>
+    <button class="info-menu__button">Education</button>
+    <button class="info-menu__button">Experience</button>
+    <button class="info-menu__button">Skills</button>
+    <button class="info-menu__button">Portfolio</button>
+    <button class="info-menu__button">Contact</button>
+  </div>
+</div>
