--- a/src/app/core/tool/app.component.scss
+++ b/src/app/core/tool/app.component.scss
@@ -1,10 +1,13 @@
+@import "../../app-styles/mixins.scss";
+@import "../../app-styles/variables.scss";
+
 main {
   width: 100vw;
   height: 100vh;
   background: url("../../../assets/images/bg.png") center/cover;
 
   .container {
-    width: 1080px;
+    max-width: 1080px;
     margin: 0 auto;
     padding: 20px;
   }
@@ -12,9 +15,7 @@ main {
 
 .header {
   &-container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+    @include flex(space-between, center, 10px);
   }
 
   &__logo {
@@ -22,6 +23,51 @@ main {
 
     img {
       height: 100%;
+    }
+  }
+
+  &__menu {
+    @include flex(space-between, center, 20px);
+
+    &-item {
+      &--curcle {
+        @include icon-black;
+
+        img {
+          height: 100%;
+        }
+      }
+    }
+  }
+
+  &__button {
+    @include button-black;
+    font-size: 18px;
+  }
+}
+
+.container-main {
+  width: 100%;
+  height: 100%;
+  margin: 40px 0;
+
+  @include flex(center, center, 20px);
+}
+
+@media (max-width: 576px) {
+  main {
+    position: fixed;
+
+    .container {
+      position: absolute;
+      inset: 0;
+      overflow: scroll;
+    }
+  }
+
+  .header {
+    &__button {
+      font-size: 25px;
     }
   }
 }
