--- a/src/app/core/tool/modules/main-page/component/main-page-home.component.html
+++ b/src/app/core/tool/modules/main-page/component/main-page-home.component.html
@@ -2,11 +2,23 @@
   <div class="info-name">my name is Olha</div>
   <div class="info-position">I`m a FRONT-END DEVELOPER</div>
   <div class="info-menu">
-    <button class="info-menu__button">About me</button>
-    <button class="info-menu__button">Education</button>
-    <button class="info-menu__button">Experience</button>
-    <button class="info-menu__button">Skills</button>
-    <button class="info-menu__button">Portfolio</button>
-    <button class="info-menu__button">Contact</button>
+    <a routerLink="./about-me">
+      <div class="info-menu__button">About me</div>
+    </a>
+    <a routerLink="./education">
+      <div class="info-menu__button">Education</div>
+    </a>
+    <a routerLink="./experience">
+      <div class="info-menu__button">Experience</div>
+    </a>
+    <a routerLink="./skills">
+      <div class="info-menu__button">Skills</div>
+    </a>
+    <a routerLink="./portfolio">
+      <div class="info-menu__button">Portfolio</div>
+    </a>
+    <a routerLink="./contact">
+      <div class="info-menu__button">Contact</div>
+    </a>
   </div>
 </div>
