--- a/src/app/core/tool/app.component.html
+++ b/src/app/core/tool/app.component.html
@@ -7,13 +7,15 @@
         </div>
 
         <div class="header__menu">
-          <div class="header__menu-item header__menu-item--curcle">
-            <a href="https://www.linkedin.com/in/olha-kobylianska-0482a8237/" target="_blank"><img
-                src="../../../assets/images/linkedin-logo.svg" alt="logo linkedin"></a>
-          </div>
-          <div class="header__menu-item header__menu-item--curcle">
-            <a href="https://github.com/OlhaKobylianskaAlex" target="_blank"><img
-                src="../../../assets/images/github-logo.svg" alt="logo github"></a>
+          <div class="header__menu-item header__menu-item--icons">
+            <div class="header__menu-item-curcle">
+              <a href="https://www.linkedin.com/in/olha-kobylianska-0482a8237/" target="_blank"><img
+                  src="../../../assets/images/linkedin-logo.svg" alt="logo linkedin"></a>
+            </div>
+            <div class="header__menu-item-curcle">
+              <a href="https://github.com/OlhaKobylianskaAlex" target="_blank"><img
+                  src="../../../assets/images/github-logo.svg" alt="logo github"></a>
+            </div>
           </div>
           <div class="header__menu-item">
             <button class="header__button">LOG IN</button>
