--- a/src/app/core/tool/modules/about-me-page/component/about-me-page.component.html
+++ b/src/app/core/tool/modules/about-me-page/component/about-me-page.component.html
@@ -1,1 +1,4 @@
-about me
+<div class="card">
+  <app-button-back></app-button-back>
+  <app-title-block [title]="'About me'"></app-title-block>
+</div>
