--- a/src/app/core/tool/modules/contact-page/component/contact-page.component.html
+++ b/src/app/core/tool/modules/contact-page/component/contact-page.component.html
@@ -1,1 +1,4 @@
-contact
+<div class="card">
+  <app-button-back></app-button-back>
+  <app-title-block [title]="'Contact'"></app-title-block>
+</div>
