--- a/src/app/core/tool/modules/education-page/component/education-page.component.html
+++ b/src/app/core/tool/modules/education-page/component/education-page.component.html
@@ -1,1 +1,4 @@
-education
+<div class="card">
+  <app-button-back></app-button-back>
+  <app-title-block [title]="'Education'"></app-title-block>
+</div>
