--- a/src/app/core/tool/modules/experience-page/component/experience-page.component.html
+++ b/src/app/core/tool/modules/experience-page/component/experience-page.component.html
@@ -1,1 +1,4 @@
-experience
+<div class="card">
+  <app-button-back></app-button-back>
+  <app-title-block [title]="'Experience'"></app-title-block>
+</div>
