--- a/src/app/core/tool/modules/main-page/component/main-page-home.component.scss
+++ b/src/app/core/tool/modules/main-page/component/main-page-home.component.scss
@@ -61,10 +61,11 @@
       font-size: 30px;
     }
     &-position {
-      font-size: 40px;
+      font-size: 30px;
     }
 
     &-menu {
+      width: 100%;
       margin: 20px 0;
 
       display: grid;
