--- a/src/app/core/tool/modules/portfolio-page/component/portfolio-page.component.html
+++ b/src/app/core/tool/modules/portfolio-page/component/portfolio-page.component.html
@@ -1,1 +1,4 @@
-portfolio
+<div class="card">
+  <app-button-back></app-button-back>
+  <app-title-block [title]="'Portfolio'"></app-title-block>
+</div>
