--- a/src/app/app-styles/mixins.scss
+++ b/src/app/app-styles/mixins.scss
@@ -32,6 +32,7 @@
 @mixin button-light {
   height: 80px;
   width: 200px;
+  padding-bottom: 5px;
 
   display: flex;
   justify-content: center;
@@ -46,7 +47,7 @@
   cursor: pointer;
 
   @media (max-width: 576px) {
-    width: 400px;
+    width: 100%;
   }
 }
 
