--- a/src/styles.scss
+++ b/src/styles.scss
@@ -13,3 +13,12 @@ a:visited {
   color: transparent;
   text-decoration: none;
 }
+
+html,
+body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
